# kq

./: .bazelrc  .bazelversion  .cursorrules  .gitignore  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md
docs/: BENCHMARKS.md  DEVELOPMENT.md  GETTING-STARTED-CONTRIBUTING-cn.md  GETTING-STARTED-CONTRIBUTING.md  USAGE.md  test-rules.md
kq/: BUILD.bazel  lib.rs
kq/cli/: BUILD.bazel  interactive.rs
kq/engine_setup/: BUILD.bazel
kq/loader/: BUILD.bazel  ipc_loader.rs  mod.rs  parquet_loader.rs  phase_timing.rs  progress_reporter.rs  sax_json_parser.rs  streaming_json_loader.rs
kq/memory/: BUILD.bazel  mod.rs
kq/output/: BUILD.bazel  mod.rs
kq/query/: BUILD.bazel  functions.rs  mod.rs
kq/schema/: kubernetes.rs  mod.rs  nested.rs
kq/src/: BUILD.bazel  main.rs
kq/src/cli/: BUILD.bazel  mod.rs
kq/src/engine_setup/: BUILD.bazel  mod.rs
kq/src/loader/: BUILD.bazel  ndjson_loader.rs  resource_table.rs
kq/src/memory/: BUILD.bazel  memory_reporter.rs  regression.rs
kq/src/output/: BUILD.bazel
kq/src/query/: BUILD.bazel
kq/src/schema/: BUILD.bazel
kq/src/synthetic/: mod.rs
kq/synthetic/: BUILD.bazel
kq/tests/: BUILD.bazel  cli_e2e_tests.rs  golden_daemonset.json  golden_namespace.json  golden_node.json  golden_pod_with_affinity.json  integration_loader_progress_tests.rs  loader_advanced_tests.rs  loader_tests.rs  synthetic_snapshot_tests.rs
kq/tools/: BUILD.bazel  analyze_loading_phases.rs  memory_regression_benchmark.rs  registration_hotspot_benchmark.rs  snapshot_convert.rs  snapshot_correctness.rs  synthetic_query_benchmark.rs  synthetic_snapshot.rs
scripts/: demo_synthetic_multicluster_queries.sh
