[package]
name = "kq"
version = "0.1.0"
edition = "2021"

[lib]
path = "kq/lib.rs"

[dependencies]
anyhow = "1.0"
arrow = "55.2"
arrow-array = "55.2"
arrow-json = "55.2"
arrow-schema = "55.2"
bytesize = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
comfy-table = "7.1"
csv = "1.3"
dashmap = "6.1"
datafusion = "47.0"
dirs = "5.0"
flate2 = "1.0"
indicatif = "0.17"
jemalloc-ctl = "0.5"
jemallocator = "0.5"
k8s-openapi = { version = "0.24", default-features = false, features = ["v1_30"] }
num_cpus = "1.16"
parquet = "55.2"
pprof = { version = "0.13", features = ["flamegraph"] }
rayon = "1.10"
regex = "1.11"
rustyline = "15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tempfile = "3.10"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
