"""kq Bazel module."""

module(
    name = "kq",
)

# Rust rules for building Rust code
bazel_dep(name = "rules_rust", version = "0.70.0")

# Configure Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2024")

# Configure Rust crates for kq.
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
    ],
)
use_repo(crate, "crates")
