load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

# Query library - SQL query execution
rust_library(
    name = "query",
    crate_name = "kq_query",
    crate_root = "mod.rs",
    srcs = [
        "mod.rs",
        "functions.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//kq/src/loader:loader",
        "//kq/src/schema:schema",
        "@crates//:anyhow",
        "@crates//:arrow",
        "@crates//:arrow-array",
        "@crates//:arrow-schema",
        "@crates//:datafusion",
        "@crates//:regex",
        "@crates//:serde_json",
        "@crates//:tracing",
    ],
)

# Unit tests for query library
rust_test(
    name = "query_test",
    crate = ":query",
    deps = [
        "//kq/src/loader:loader",
        "//kq/src/schema:schema",
        "@crates//:chrono",
        "@crates//:tempfile",
        "@crates//:tokio",
    ],
)

